src/objects/Quote_Recurring_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HasSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Item_Description__c</fullName>
        <label>Line Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Number__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Recurring Line Items</relationshipLabel>
        <relationshipName>Quote_Recurring_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <label>Quote Name</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Recurring Line Items</relationshipLabel>
        <relationshipName>Quote_Recurring_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ServiceDate__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Quote Recurring Line Item</label>
    <nameField>
        <label>Quote Recuring Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Recurring Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>